--- a/style.css
+++ b/style.css
@@ -59,6 +59,35 @@ main {
     max-width:100%;
 }
 
+.contact-div {
+    margin-bottom: 20px;
+}
+.contact-icons > a {
+    margin: 0px 10px;
+    text-decoration: none;
+}
+.contact-icons {
+    text-align: center;
+
+}
+.contact-div > h2 {
+    margin-bottom: 20px;
+}
+.my-icon {
+    font-size: 40px;
+    color:#2f3033;
+    padding: 2px;
+    border-radius: 10px;
+    transition: transform 0.1s ease-out;
+/*     border: solid 1px #2f3033; */
+}
+.my-icon:hover {
+    transform: scale(1.1);
+    box-shadow: 0 3px 6px #888888;
+/*     border: solid 1px #ff9000; */
+    color:#ff9000;
+}
+
 @media screen and (max-width: 1220px) {
     main {
         margin: 10px;
