--- a/style.css
+++ b/style.css
@@ -23,11 +23,11 @@ header {
 }
 
 .nav-button:hover {
-    box-shadow: 0 3px 6px #888888;
+    box-shadow: 0 3px 6px white;
     border-radius: 10px;
     cursor: pointer;
     transform: scale(1.05);
-/*     color: #ff9000 !important; */
+    /* color: #ff9000 !important; */
 }
 @media screen and (max-width: 991px) {
     #header-title {
@@ -59,6 +59,7 @@ main {
     max-width:100%;
 }
 
+/* -----------Contact-page--------- */
 .contact-div {
     margin-bottom: 20px;
 }
@@ -72,6 +73,7 @@ main {
 }
 .contact-div > h2 {
     margin-bottom: 20px;
+    text-align: center;
 }
 .my-icon {
     font-size: 40px;
@@ -87,6 +89,7 @@ main {
 /*     border: solid 1px #ff9000; */
     color:#ff9000;
 }
+/* -----------Contact-page--------- */
 
 @media screen and (max-width: 1220px) {
     main {
