--- a/style.css
+++ b/style.css
@@ -13,13 +13,12 @@ header {
     font-size: 50px;
     color: #ff9000;
     margin-right: 30px;
-/*     text-shadow: 0 2px 4px white; */
 }
 
 .nav-button {
     margin: 0px 10px;
-    /* transition: transform 0.1s ease-out !important; */
     user-select: none;
+    /*  transition: transform 0.1s ease-out !important; */
 }
 
 .nav-button:hover {
@@ -27,16 +26,15 @@ header {
     border-radius: 10px;
     cursor: pointer;
     transform: scale(1.05);
-    /* color: #ff9000 !important; */
 }
+
 @media screen and (max-width: 991px) {
     #header-title {
         margin-right: 0px;
     }
 }
 
-
-/* -----------HEADER--------- */
+/* -----------END HEADER--------- */
 
 /* -----------MAIN--------- */
 
@@ -45,8 +43,8 @@ main {
     margin: 10px auto;
     /* margin: 10px 10px; */
     margin-bottom: 40px;
-    padding: 10px;
-    /* box-shadow: 0 1px 4px #888888; */
+    padding: 10px 10px 30px 10px;
+    box-shadow: 0 1px 4px #888888;
     align-content: center;
 }
 
@@ -81,15 +79,13 @@ main {
     padding: 2px;
     border-radius: 10px;
     transition: transform 0.1s ease-out;
-/*     border: solid 1px #2f3033; */
 }
 .my-icon:hover {
     transform: scale(1.1);
     box-shadow: 0 3px 6px #888888;
-/*     border: solid 1px #ff9000; */
     color:#ff9000;
 }
-/* -----------Contact-page--------- */
+/* -----------END Contact-page--------- */
 
 @media screen and (max-width: 1220px) {
     main {
@@ -98,7 +94,7 @@ main {
     }
 }
 
-/* -----------MAIN--------- */
+/* -----------END MAIN--------- */
 
 /* -----------FOOTER--------- */
 footer {
@@ -111,4 +107,4 @@ footer {
     width: 100%;
     color: white;
 }
-/* -----------FOOTER--------- */
+/* -----------END FOOTER--------- */
