--- a/style.css
+++ b/style.css
@@ -64,6 +64,20 @@ main {
     max-width:100%;
 }
 
+/* -----------Business-plan-page--------- */
+
+.business-plan-div > h2 {
+    margin: 30px 0px 20px 0px;
+    text-align: center;
+}
+#business-plan-idea {
+    text-align: center;
+    font-style: italic;
+    margin-top: 20px;
+}
+
+/* -----------END-Business-plan-page--------- */
+
 /* -----------Contact-page--------- */
 .contact-div {
     margin-bottom: 20px;
