Tog bort button-klassen och gjorde register till en länk istället, kanske gör någon annan men just nu snurrade den bara till det

--- a/src/app/components/transactions/Transaction-form.css
+++ b/src/app/components/transactions/Transaction-form.css
@@ -1,9 +1,9 @@
-.transaction-form {
+/* .transaction-form {
     margin: auto;
     width: 90%;
     padding: 10px;
 }
-
+ */
 .transaction-form > label > input {
     padding: 10px;
     box-shadow: 0 0 2px 1px;
