--- a/src/app/components/Navbar/Navbar.css
+++ b/src/app/components/Navbar/Navbar.css
@@ -55,6 +55,26 @@
     display: none;
 }
 
+/* Registerbutton */
+.register-link {
+    background-color: #ff9000;
+    color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+}
+.register-link:hover {
+    box-shadow: none;
+    transition: all 0.3s ease-out;
+    background: #fff;
+    color: rgb(47, 48, 51, 1);
+    transition: 250ms;
+    border-radius: 4px;
+}
+
 @media screen and (max-width: 960px) {
     .NavbarItems {
         position: relative;
@@ -114,7 +134,7 @@
         font-size: 2rem;
     }
 
-    .nav-links-mobile {
+    .register-link {
         display: block;
         text-align: center;
         padding: 1.5rem;
@@ -127,13 +147,9 @@
         font-size: 1.5rem;
     }
 
-    .nav-links-mobile:hover {
+    .register-link:hover {
         background: #fff;
         color: rgb(47, 48, 51, 1);
         transition: 250ms;
-    }
-
-    .btn {
-        display:none
     }
 }
