--- a/src/app/css/app.css
+++ b/src/app/css/app.css
@@ -5,6 +5,12 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+main {
+    margin: auto;
+    width: 90%;
+    padding: 15px;
+}
+
 form > label {
     display: block;
   }
