Fixade navbaren så att clicken inte reagerar på varandra

--- a/src/app/components/transactions/Transaction-history.css
+++ b/src/app/components/transactions/Transaction-history.css
@@ -17,6 +17,10 @@
     width: 15%;
 }
 
+.empty > p {
+    padding: 5px;
+}
+
 @media screen and (max-width: 1330px) {
     .transaction {
         width: 30%;
