--- a/src/app/components/Navbar/Navbar.css
+++ b/src/app/components/Navbar/Navbar.css
@@ -13,12 +13,13 @@
     justify-self: start;
     margin-left: 20px;
     cursor: pointer;
-    width: 160px;
+    width: 200px;
+    font-size: 40px;
 }
 
 .fa-coins {
     margin-left: 0.5rem;
-    font-size: 1.8rem;
+    font-size: 2.2rem;
 }
 
 .nav-menu {
@@ -128,15 +129,15 @@
 
     .navbar-logo {
         position: absolute;
-        top: 0;
-        left: 0;
+        top: -10;
+        left: -20;
         transform: translate(25%, 50%);
     }
 
     .menu-icon {
         display: block;
         position: absolute;
-        top: 0;
+        top: 3;
         right: 0;
         transform: translate(-100%, 60%);
         font-size: 1.8rem;
