--- a/src/app/components/transactions/transaction-form.css
+++ b/src/app/components/transactions/transaction-form.css
@@ -20,7 +20,7 @@
     font-size: 20px;
 }
 
-.transaction-form > input[type=submit] {
+.transaction-form > button {
     margin: 10px 10px 10px 0;
     font-size: 20px;
     background-color: rgb(47, 48, 51, 1);
@@ -30,7 +30,7 @@
     border: none;
 }
 
-.transaction-form > input[type=submit]:hover {
+.transaction-form > button:hover {
     background-color: #ff9000;
     transition: all 0.3s ease-out;
     cursor: pointer;
@@ -43,3 +43,51 @@
         width: 50%;
     }
 } 
+
+
+
+/*----- ADD TRANSACTION MODAL -----*/
+
+.modal-background {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+
+}
+.modal-container {
+    justify-content: center;
+    width: 80%;
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    display: flex;
+    flex-direction: column;
+    padding: 25px;
+}
+
+.modal-container .title {
+    display: inline-block;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.modal-close-div {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.modal-close-div button {
+    background-color: transparent;
+    border: none;
+    font-size: 25px;
+    cursor: pointer;
+}
+
