--- a/src/app/components/transactions/transactions-css/transaction-form.css
+++ b/src/app/components/transactions/transactions-css/transaction-form.css
@@ -38,6 +38,10 @@
     transform: scale(1.1);
 }
 
+.error {
+    color: red;
+}
+
 @media screen and (min-width: 960px) {
     .transaction-form > label > input, .transaction-form > label > select {
         width: 50%;
