--- a/src/app/components/transactions/transactions-css/transaction-form.css
+++ b/src/app/components/transactions/transactions-css/transaction-form.css
@@ -42,13 +42,6 @@
     color: red;
 }
 
-@media screen and (min-width: 960px) {
-    .transaction-form > label > input, .transaction-form > label > select {
-        width: 50%;
-    }
-
-} 
-
 
 
 /*----- ADD TRANSACTION MODAL -----*/
@@ -95,4 +88,10 @@
     font-size: 25px;
     cursor: pointer;
 }
+
+@media screen and (min-width: 630px) {
+    .transaction-form-container {
+        width: 504;
+    }
+} 
 
