--- a/src/app/components/wallets/wallet-add-form.css
+++ b/src/app/components/wallets/wallet-add-form.css
@@ -14,7 +14,7 @@
 
 .wallet-add-form-container {
     justify-content: center;
-    width: 50%;
+    width: 80%;
     border-radius: 12px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -53,4 +53,8 @@
 }
 
 
-
+@media screen and (min-width: 700px) {
+    .wallet-add-form-container {
+        width: 560;
+    }
+} 
