--- a/src/app/components/wallet/css/wallet-add-form.css
+++ b/src/app/components/wallet/css/wallet-add-form.css
@@ -1,45 +1,4 @@
-.wallet-add-form-background {
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4);
-}
-
-.wallet-add-form-container {
-    justify-content: center;
-    width: 80%;
-    border-radius: 12px;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    display: flex;
-    flex-direction: column;
-    padding: 25px;
-}
-
-.wallet-add-form-close {
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 10px;
-}
-
-.wallet-add-form-close button {
-    background-color: transparent;
-    border: none;
-    font-size: 25px;
-    cursor: pointer;
-}
-
-.wallet-add-form-container > h1 {
-    margin-bottom: 10px;
-}
-.wallet-add-form-container > select, .wallet-add-form-container > input {
+.add-wallet-select, .add-wallet-input {
     padding: 10px;
     box-shadow: 0 0 2px 1px;
     border-radius: 6px;
@@ -47,14 +6,3 @@
     border: 2px solid #ff9000;
     width: 100%;
 }
-
-.wallet-add-form-container > p {
-    margin: 20px 0;
-}
-
-
-@media screen and (min-width: 700px) {
-    .wallet-add-form-container {
-        width: 560;
-    }
-} 
