--- a/src/app/components/modal/modal.css
+++ b/src/app/components/modal/modal.css
@@ -9,6 +9,15 @@
     bottom: 0;
     background-color: rgba(0,0,0,0.4);
     overflow: auto;
+
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+    pointer-events: none;
+}
+
+.modal.show {
+    opacity: 1;
+    pointer-events: visible;
 }
 
 .modal-content{
@@ -22,7 +31,13 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    
+
+    transform: translateY(-200px);
+    transition: all 0.3s ease-in-out;
+}
+
+.modal.show .modal-content {
+    transform: translateY(0);
 }
 
 .modal-title {
