Ändrat modalerna lite och lagt till en portal. Har ännu kvar att göra. Behöver kolla med Viktor

--- a/src/app/components/modal/modal.css
+++ b/src/app/components/modal/modal.css
@@ -15,7 +15,7 @@
     pointer-events: none;
 }
 
-.modal.show {
+.modal.open {
     opacity: 1;
     pointer-events: visible;
 }
@@ -36,7 +36,7 @@
     transition: all 0.3s ease-in-out;
 }
 
-.modal.show .modal-content {
+.modal.open .modal-content {
     transform: translateY(0);
 }
 
