--- a/src/app/components/routes/css/transactions.css
+++ b/src/app/components/routes/css/transactions.css
@@ -16,11 +16,7 @@
     transform: scale(1.1);
 }
 
-@media screen and (max-width: 560px) {
-    .add-transaction-button-div{
-        text-align: center
-    }
-    .add-transaction-button-div{
-        text-align: center
-    }
-} 
+.add-transaction-button-div {
+    text-align: center;
+    margin-bottom: 10px;
+}
