--- a/src/app/components/transactions/transactions-css/transaction-history.css
+++ b/src/app/components/transactions/transactions-css/transaction-history.css
@@ -1,57 +1,50 @@
-.transaction-history {
-    margin-bottom: 20px;
-}
-.transaction-history > h2{
-    margin-bottom: 20px;
+.transaction-history > h2 {
+    text-align: center;
 }
 
-.transaction-container {
-    display: flex;
-    flex-wrap: wrap;
-    text-decoration: none;
-    color: black;
+.transactions {
+    margin-top: 30px;
+    margin-bottom: 40px;
+    text-align: center;
 }
 
 .transaction {
-    margin: 5px;
-    padding: 5px;
+    margin: 10px 0;
     box-shadow: 0 2px 4px #888888;
-    width: 15%;
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
     text-decoration: none;
-    color: black;
     transition: transform 0.1s ease;
+    user-select: none;
 }
+
 .transaction:hover {
-    transform: scale(104%);
+    transform: scale(103%);
     cursor: pointer;
+    background-color: #e9e9e9;
 }
 
-.empty > p {
-    padding: 5px;
-}
+@media screen and (min-width: 748px) {
+    .transaction-history {
+        margin: auto auto 50px auto;
+    }
 
-@media screen and (max-width: 1330px) {
     .transaction {
-        width: 30%;
+        display: flex;
+        justify-content: left;
+        align-items: baseline;
     }
-}
-@media screen and (max-width: 820px) {
-    .transaction {
-        width: 45%;
-    }
-    .transaction-history > h1 {
-        text-align: center;
-    }
-}
 
-@media screen and (max-width: 560px) {
-    .transaction {
-        width: 100%;
-    }
-    .transaction-history > h1 {
-        text-align: center;
-    }
-    .transaction {
-        align-content: center;
+    .transaction > * {
+        width: 33%;
+        text-align: left;
     }
 } 
+
+@media screen and (min-width: 1100px) {
+    .transaction-history {
+        max-width: 75%;
+
+    }
+}
