--- a/src/app/components/transactions/transactions-css/transaction-history.css
+++ b/src/app/components/transactions/transactions-css/transaction-history.css
@@ -17,6 +17,7 @@
     text-decoration: none;
     transition: transform 0.1s ease;
     user-select: none;
+    border-radius: 8px;
 }
 
 .transaction:hover {
