--- a/src/app/components/routes/css/wallet-transactions-route.css
+++ b/src/app/components/routes/css/wallet-transactions-route.css
@@ -38,6 +38,7 @@
     padding: 20px;
     text-align: center;
     font-size: 20px;
+    border-radius: 8px;
 }
 
 @media screen and (min-width: 748px) {
