Har fixat lite felhantering om användare lägger till annan kryptobörs

--- a/src/app/components/routes/css/wallet-transactions-route.css
+++ b/src/app/components/routes/css/wallet-transactions-route.css
@@ -41,6 +41,10 @@
     border-radius: 8px;
 }
 
+.wallet-transactions-connected {
+    text-align: center;
+}
+
 @media screen and (min-width: 748px) {
     .wallet-transactions-content {
         margin: auto auto 50px auto;
