Ändrat lite styling på transactionssidan

--- a/src/app/components/transactions/transactions-css/transaction-history.css
+++ b/src/app/components/transactions/transactions-css/transaction-history.css
@@ -27,6 +27,9 @@
 }
 
 @media screen and (min-width: 748px) {
+    .transaction-history > h2 {
+        text-align: left;
+    }
     .transaction-history {
         margin: auto auto 50px auto;
     }
