--- a/src/app/components/routes/css/transactions.css
+++ b/src/app/components/routes/css/transactions.css
@@ -20,3 +20,8 @@
     text-align: center;
     margin-bottom: 10px;
 }
+
+.transactions-route > h2 {
+    text-align: center;
+    margin-bottom: 10px;
+}
